[package]
name = "mojes-dom-api"
version = "0.1.0"
edition = "2024"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
mojes-derive = { path = "../mojes-derive" }
linkme = "*"

[dev-dependencies]
boa_engine = "0.17"
syn = { version = "2.0", features = ["full", "extra-traits", "visit", "parsing"] }
