[package]
name = "mojes-dom-api"
version = "0.1.0"
edition = "2024"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
mojes-derive = { path = "../mojes-derive" }
linkme = "*"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0"}


[dev-dependencies]
boa_engine = "0.17"
syn = { version = "2.0", features = ["full", "extra-traits", "visit", "parsing"] }
