[package]
name = "mojes-mojo"
version = "0.1.0"
edition = "2024"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
swc_common = { version = "*", features = ["concurrent"] }
swc_ecma_ast = "*"
swc_ecma_parser = "*"
swc_ecma_codegen = "*"
swc_ecma_visit = "*"
swc_atoms = "*"


[dev-dependencies]
boa_engine = "0.17"
syn = { version = "2.0", features = ["full", "extra-traits", "visit", "parsing"] }
